app/frontend/src/stylesheets/modules/trainings/trainings.scss
.trainings {
  max-width: 1600px;
  margin: 0 auto;
  padding-bottom: 6rem;
  display: grid;
  gap: 2.4rem;

  header {
    @include header();
    padding-bottom: 1.6rem;
  }

  &-grid {
    width: 100%;
    display: grid;
    grid-template-columns: repeat(auto-fill, minmax(400px, 1fr));
    gap: 3.2rem;

    .panel { margin-bottom: 0; }
  }

  &-content {
    display: flex;
    flex-direction: column;
    gap: 1.6rem;

    .display {
      padding: 0.8rem 2.4rem;
      display: flex;
      flex-wrap: wrap;
      justify-content: flex-end;
      background-color: var(--gray-soft);
      border-radius: var(--border-radius);

      .filter {
        display: flex;
        align-items: center;
        p { margin: 0 0.8rem 0 0; }
      }
    }

    .trainings-list {
      display: flex;
      flex-direction: column;
      gap: 1.6rem;

      &-item {
        width: 100%;
        display: grid;
        justify-content: space-between;
        grid-template-columns: 1fr;
        gap: 1.6rem;
        padding: 1.6rem;
        border: 1px solid var(--gray-soft-dark);
        border-radius: var(--border-radius);
        background-color: var(--gray-soft-lightest);
        &.is-override {
          border-color: var(--gray-hard-darkest);
        }
        span {
          @include text-xs;
          color: var(--gray-hard-light);
        }
        p {
          margin: 0;
          @include text-base(600);
          span {
            margin: 0 1ch;
            @include text-base(400);
          }
        }

        .name,
        .associated-machines { grid-column: 1 / -1; }
        .associated-machines {
          overflow: hidden ;
          p { @extend .text-ellipsis; }
        }
        .override {
          margin-left: 1ch;
          @include text-sm;
          font-style: italic;
          color: var(--alert-light);
        }
        .actions {
          grid-column-end: -1;
          display: flex;
          justify-content: flex-end;
          align-items: center;
          .grpBtn {
            overflow: hidden;
            display: flex;
            border-radius: var(--border-radius-sm);
          }
        }

        @media (min-width: 1024px) {
          grid-template-columns: 1fr 1fr;
        }
        @media (min-width: 1440px) {
          grid-template-columns: 2fr 1fr 1fr max-content;
          grid-auto-flow: column;
          gap: 1.6rem 3.2rem;
          .name { grid-area: 1/1/2/2; }
          .associated-machines { grid-area: 2/1/3/2; }
          .actions { grid-row: 1/3; }
        }
      }
    }
  }
}

